# AnchorEngine

./: .gitignore  AnchorEngine.sln  AnchorEngine.vcxproj  AnchorEngine.vcxproj.filters  CMakeLists.txt
assets/scripts/: bluepig.lua  gameloop.lua  setupscript.lua
assets/shaders/: sampleShader.txt
demo/: helloworld.cpp
src/: Engine.h  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  UIManager.h
